--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-image: url(https://media.istockphoto.com/photos/mountain-of-books-education-dark-background-picture-id1195277271?k=20&m=1195277271&s=170667a&w=0&h=F93ZN7IrlYLpAEMwUAeEl1wRQuFmIKlE8Apa-qPDbgg=);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: inherit;
   background-attachment: fixed;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "lato", sans-serif;
 }
 h1 {
   color: white;
@@ -108,11 +113,39 @@ th {
   height: 32px;
   background-color: white;
   border-radius: 4px;
-  transition: 0.4s;
+  transition: 0.8s;
+  margin-top: 6px;
+  margin-left: 9px;
 }
 .menuopener:hover {
   background-color: #818181;
 }
 .sidenav .active {
   color: white;
+}
+.navbar {
+  height: 45px;
+  background-color: aqua;
+  margin-bottom: 30px;
+  position: relative;
+}
+.navbar div a {
+  display: inline-block;
+  vertical-align: 50% 50%;
+}
+.navbar a {
+  text-decoration: none;
+  display: inline-block;
+}
+.navbaritem {
+  text-decoration: none;
+  text-align: left;
+  font-size: large;
+  margin-left: 20px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  transition: 0.6s;
+  color: gray; 
+}
+.navbaritem:hover {
+  color: blue;
 }
