--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
   background-attachment: fixed;
   font-family: 'Amita';
   font-size: 22px;
+  margin-bottom: 90px;
 }
 h1 {
   color: white;
