--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@ body {
   background-size: cover;
   background-position: inherit;
   background-attachment: fixed;
-  font-family: 'Amita';
-  font-size: 19px;
+  font-family: 'Aladin';
+  font-size: 20px;
   margin-bottom: 90px;
 }
 h1 {
