--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@
   padding: 0;
 }
 
+p }
+text-align: centre
+}
+
+
 body {
   background-image: url(https://media.istockphoto.com/photos/mountain-of-books-education-dark-background-picture-id1195277271?k=20&m=1195277271&s=170667a&w=0&h=F93ZN7IrlYLpAEMwUAeEl1wRQuFmIKlE8Apa-qPDbgg=);
   background-repeat: no-repeat;
