--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
   background-size: cover;
   background-position: inherit;
   background-attachment: fixed;
-  font-family: 'Aladin';
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 20px;
   margin-bottom: 90px;
 }
@@ -156,10 +156,87 @@ th {
   text-align: left;
   font-size: large;
   margin-left: 20px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   transition: 0.6s;
-  color: gray; 
+  color: gray;
 }
 .navbaritem:hover {
   color: blue;
+}
+.time {
+  display: inline-block;
+  margin-left: 87%;
+  color: orangered;
+}
+.subn {
+  cursor: pointer;
+  width: 96px;
+  height: 28px;
+  border-radius: 50px;
+  border-style: hidden;
+  margin-bottom: 20px;
+  margin-top: 40px;
+  border-radius: 9px;
+}
+.mybutton {
+  cursor: pointer;
+  width: 136px;
+  height: 34px;
+  border-radius: 10px;
+  transition: 0.3s;
+  border-style: hidden;
+  margin-bottom: 33px;
+  margin-top: 40px;
+  border: 2px solid red;
+}
+.mybutton:hover {
+  border: 2px solid blue;
+}
+.image {
+  opacity: 1;
+  display: block;
+  width: 165px;
+  height: auto;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+  border-radius: 10px;
+  border: 2px solid red;
+  margin-left: 247%;
+}
+.mybutton:hover span {
+  display: none;
+}
+
+.mybutton:hover:after {
+  border: 2px solid blue;
+  font-size: 18px;
+}
+.container {
+  position: relative;
+  width: 18%;
+}
+.middle {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 31%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  position: absolute;
+  margin-left: 247%;
+}
+.container:hover .image {
+  opacity: 0.3;
+}
+
+.container:hover .middle {
+  opacity: 1;
+}
+.text {
+  background-color: #04aa6d;
+  color: white;
+  font-size: 16px;
+  border-radius: 8px;
 }
