Revert "Update styles.css"
This reverts commit d6388e3ea300fb540808de3c390d886f3ad551cb.

--- a/styles.css
+++ b/styles.css
@@ -73,65 +73,53 @@ th {
   color: orangered;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-/* Fixed sidenav, full height */
 .sidenav {
   height: 100%;
-  width: 200px;
+  width: 0;
   position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
   background-color: #111;
   overflow-x: hidden;
-  padding-top: 20px;
+  transition: 0.5s;
+  padding-top: 60px;
 }
 
-/* Style the sidenav links and the dropdown button */
-.sidenav a, .dropdown-btn {
-  padding: 6px 8px 6px 16px;
+.sidenav a {
+  padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 25px;
   color: #818181;
   display: block;
-  border: none;
-  background: none;
-  width:100%;
-  text-align: left;
-  cursor: pointer;
-  outline: none;
+  transition: 0.3s;
 }
 
-/* On mouse-over */
-.sidenav a:hover, .dropdown-btn:hover {
+.sidenav a:hover {
   color: #f1f1f1;
 }
 
-/* Main content */
-.main {
-  margin-left: 200px; /* Same as the width of the sidenav */
-  font-size: 20px; /* Increased text to enable scrolling */
-  padding: 0px 10px;
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
 }
 
-/* Add an active class to the active dropdown button */
-.active {
-  background-color: green;
-  color: white;
+#main {
+  transition: margin-left 0.5s;
+  padding: 16px;
 }
 
-/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
-.dropdown-container {
-  display: none;
-  background-color: #262626;
-  padding-left: 8px;
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
+    font-size: 18px;
+  }
 }
-
-/* Optional: Style the caret down icon */
-.fa-caret-down {
-  float: right;
-  padding-right: 8px;
-}
-
 .menuopener {
   width: 35px;
   height: 32px;
@@ -144,7 +132,9 @@ th {
 .menuopener:hover {
   background-color: #818181;
 }
-
+.sidenav .active {
+  color: white;
+}
 .navbar {
   height: 45px;
   background-color: aqua;
