--- a/styles.css
+++ b/styles.css
@@ -173,7 +173,7 @@ th {
 .time {
   display: inline-block;
   margin-left: 85%;
-  color: orangered;
+  color: tomato;
 }
 .subn {
   cursor: pointer;
