--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ marquee {
 }
 
 body {
-  background-image: url(https://cdn.pixabay.com/photo/2015/10/31/14/33/dark-1015825_960_720.jpg);
+  background-image: url(https://img.freepik.com/free-photo/many-books-black-background_1160-355.jpg?w=740&t=st=1664378019~exp=1664378619~hmac=ea62e4b197b35dadb7d94553cfd59a3b648ad61a8b4c5bc4569a49db7e93abde);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: inherit;
